	* make-relative-prefix.c (make_relative_prefix_1): Avoid 	stack overflow if PATH contains just a single entry and 	HOST_EXECUTABLE_SUFFIX needs to be used.

PR driver/48306
	* make-relative-prefix.c: Include sys/stat.h.
	(make_relative_prefix_1): If access succeeds, check also stat
	if nstore is a regular file.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182820 138bc75d-0d04-0410-961f-82ee72b054a4